# RedClock

./: .gitignore  LICENSE  README.md
case/: LaserCutting.md  boxmaker.jsl
esp/: @@@notes
esp/RedClock/: @@@ConfigNotes  CMakeLists.txt  Makefile  partitions_timezone.csv  pushall.py  sdkconfig
esp/RedClock/main/: CMakeLists.txt  clock7seg.c  clock7seg.h  clockBme280.c  clockBme280.h  clockConnect.c  clockConnect.h  clockGps.c  clockGps.h  clockHtml.c  clockHtml.h  clockMain.c  clockMain.h  clockServer.c  clockServer.h  clockSntp.c  clockSntp.h  clockTZ.c  clockTZ.h  clockspiffs.c  clockspiffs.h  component.mk  favicon.xcf  upload_script.html
esp/RedClock/main/certs/: cacert.pem
esp/RedClock/main/spiffsdata/: about.html  index.html  reboot.html
esp/RedClock/main/spiffsdata/css/: gauge.min.css  style.css
esp/esp-idf/: placeholder.txt
esp/esp-iot-solution/: README.md  placeholder.txt
pcb/: notes.md
timezone/: geojsonToBitmap10.jsl  notes.md
